# libnice

./: meson.build  meson_options.txt
agent/: meson.build
examples/: meson.build
gst/: meson.build
nice/: meson.build
random/: meson.build
socket/: tcp-bsd.c  tcp-passive.c
stun/: meson.build
stun/tests/: meson.build  test-conncheck.c
stun/tools/: meson.build
tests/: meson.build
