option('gupnp', type: 'combo', choices: ['yes', 'no', 'auto'], value: 'auto',
  description: 'Enable or disable GUPnP IGD support')
option('gstreamer', type: 'combo', choices: ['yes', 'no', 'auto'], value: 'auto',
  description: 'Enable or disable build of GStreamer plugins')
option('ignored-network-interface-prefix', type: 'string', value: '',
  description: 'Ignore network interfaces whose name starts with this string in the ICE connection check algorithm. For example, "virbr" to ignore virtual bridge interfaces added by virtd, which do not help in finding connectivity.')
option('tests', type: 'boolean', value: true,
  description: 'Enable or disable unit tests')
